@@ -1,7 +1,7 @@
 /*
  * DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS HEADER.
  *
- * Copyright (c) 1997-2013 Oracle and/or its affiliates. All rights reserved.
+ * Copyright (c) 1997-2014 Oracle and/or its affiliates. All rights reserved.
  *
  * The contents of this file are subject to the terms of either the GNU
  * General Public License Version 2 only ("GPL") or the Common Development
@@ -2675,7 +2675,7 @@ public class IMAPProtocol extends Protocol {
      *
      * @since	JavaMail 1.4.1
      */
-    public void idleAbort() throws ProtocolException {
+    public void idleAbort() {
 	OutputStream os = getOutputStream();
 	try {
 	    os.write(DONE);
